blog and arv