@@ -10,6 +10,7 @@ import org.springframework.stereotype.Service;
 
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 public class ScheduleService {
@@ -20,57 +21,61 @@ public class ScheduleService {
     @Autowired
     private DoctorRepository doctorRepository;
 
+
+
     public List<ScheduleDTO> getAllSchedules() {
-        return scheduleRepository.findAll()
-                .stream()
-                .map(this::convertToDTO)
-                .toList();
+        return scheduleRepository.findAll().stream().map(this::toDTO).collect(Collectors.toList());
+    }
+
+    public List<ScheduleDTO> getSchedulesByDoctor(Long doctorId) {
+        return scheduleRepository.findByDoctorDoctorId(doctorId).stream().map(this::toDTO).collect(Collectors.toList());
     }
 
     public Optional<ScheduleDTO> getScheduleById(Long id) {
-        return scheduleRepository.findById(id)
-                .map(this::convertToDTO);
+        return scheduleRepository.findById(id).map(this::toDTO);
     }
 
     public ScheduleDTO createSchedule(ScheduleDTO dto) {
-        Schedule schedule = convertToEntity(dto);
-        Schedule saved = scheduleRepository.save(schedule);
-        return convertToDTO(saved);
+        Schedule schedule = toEntity(dto);
+        return toDTO(scheduleRepository.save(schedule));
     }
 
     public ScheduleDTO updateSchedule(Long id, ScheduleDTO dto) {
-        return scheduleRepository.findById(id).map(existing -> {
-            existing.setDate(dto.getDate());
-            existing.setStartTime(dto.getStartTime());
-            Doctor doctor = doctorRepository.findById(dto.getDoctorId())
-                    .orElseThrow(() -> new RuntimeException("Không tìm thấy bác sĩ với id " + dto.getDoctorId()));
-            existing.setDoctor(doctor);
-            Schedule updated = scheduleRepository.save(existing);
-            return convertToDTO(updated);
-        }).orElseThrow(() -> new RuntimeException("Schedule không tồn tại"));
+        Schedule schedule = scheduleRepository.findById(id).orElseThrow();
+        schedule.setTitle(dto.getTitle());
+        schedule.setStartTime(dto.getStartTime());
+        schedule.setEndTime(dto.getEndTime());
+        schedule.setRoom(dto.getRoom());
+        schedule.setPatientName(dto.getPatientName());
+        return toDTO(scheduleRepository.save(schedule));
     }
 
     public void deleteSchedule(Long id) {
         scheduleRepository.deleteById(id);
     }
 
-    // === Mapping ===
-    private ScheduleDTO convertToDTO(Schedule schedule) {
+    private ScheduleDTO toDTO(Schedule entity) {
         ScheduleDTO dto = new ScheduleDTO();
-        dto.setScheduleId(schedule.getScheduleId());
-        dto.setDoctorId(schedule.getDoctor().getDoctorId());
-        dto.setDate(schedule.getDate());
-        dto.setStartTime(schedule.getStartTime());
+        dto.setScheduleId(entity.getScheduleId());
+        dto.setTitle(entity.getTitle());
+        dto.setStartTime(entity.getStartTime());
+        dto.setEndTime(entity.getEndTime());
+        dto.setRoom(entity.getRoom());
+        dto.setPatientName(entity.getPatientName());
+        dto.setDoctorId(entity.getDoctor().getDoctorId());
         return dto;
     }
 
-    private Schedule convertToEntity(ScheduleDTO dto) {
-        Schedule schedule = new Schedule();
-        Doctor doctor = doctorRepository.findById(dto.getDoctorId())
-                .orElseThrow(() -> new RuntimeException("Không tìm thấy bác sĩ với id " + dto.getDoctorId()));
-        schedule.setDoctor(doctor);
-        schedule.setDate(dto.getDate());
-        schedule.setStartTime(dto.getStartTime());
-        return schedule;
+    private Schedule toEntity(ScheduleDTO dto) {
+        Schedule entity = new Schedule();
+        entity.setScheduleId(dto.getScheduleId());
+        entity.setTitle(dto.getTitle());
+        entity.setStartTime(dto.getStartTime());
+        entity.setEndTime(dto.getEndTime());
+        entity.setRoom(dto.getRoom());
+        entity.setPatientName(dto.getPatientName());
+        Doctor doctor = doctorRepository.findById(dto.getDoctorId()).orElseThrow();
+        entity.setDoctor(doctor);
+        return entity;
     }
 }
